--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-icons": "^1.5.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.3.0",
     "react-google-login": "^5.2.2",
     "react-gpt": "^2.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-share": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
