--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
     "history": "^5.0.0",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-beta.5",
     "react-bootstrap-icons": "^1.5.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^16.13.1",
