--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-ga": "^3.3.0",
     "react-google-login": "^5.2.2",
     "react-gpt": "^2.0.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-share": "^4.4.0"
