--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
     ]
   },
   "proxy": "http://localhost/",
-  "homepage": "https://videos.oneindia.com/dwquiz-staging/"
+  "homepage": "https://videos.oneindia.com/dwquiz/"
 }
